welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var fini:Boolean = false ;
^BDRBuggle:6: error: '(' expected but '}' found.
} 
^